--- a/explore_data.ipynb
+++ b/explore_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "e9b91165",
    "metadata": {},
    "outputs": [
@@ -38,6 +38,126 @@
     "    print(f\"Error: File not found at {os.path.abspath(file_path)}\")\n",
     "except Exception as e:\n",
     "    print(f\"An error occurred: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "38bcaee3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column names:\n",
+      "1. fixed acidity;\"volatile acidity\";\"citric acid\";\"residual sugar\";\"chlorides\";\"free sulfur dioxide\";\"total sulfur dioxide\";\"density\";\"pH\";\"sulphates\";\"alcohol\";\"quality\"\n",
+      "\n",
+      "Sample data (first 2 rows):\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "fixed acidity;\"volatile acidity\";\"citric acid\";\"residual sugar\";\"chlorides\";\"free sulfur dioxide\";\"total sulfur dioxide\";\"density\";\"pH\";\"sulphates\";\"alcohol\";\"quality\"",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "a37665e3-9d10-43dc-a734-d98c18f2c2d1",
+       "rows": [
+        [
+         "0",
+         "7.4;0.7;0;1.9;0.076;11;34;0.9978;3.51;0.56;9.4;5"
+        ],
+        [
+         "1",
+         "7.8;0.88;0;2.6;0.098;25;67;0.9968;3.2;0.68;9.8;5"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 2
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fixed acidity;\"volatile acidity\";\"citric acid\";\"residual sugar\";\"chlorides\";\"free sulfur dioxide\";\"total sulfur dioxide\";\"density\";\"pH\";\"sulphates\";\"alcohol\";\"quality\"</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7.4;0.7;0;1.9;0.076;11;34;0.9978;3.51;0.56;9.4;5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7.8;0.88;0;2.6;0.098;25;67;0.9968;3.2;0.68;9.8;5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  fixed acidity;\"volatile acidity\";\"citric acid\";\"residual sugar\";\"chlorides\";\"free sulfur dioxide\";\"total sulfur dioxide\";\"density\";\"pH\";\"sulphates\";\"alcohol\";\"quality\"\n",
+       "0   7.4;0.7;0;1.9;0.076;11;34;0.9978;3.51;0.56;9.4;5                                                                                                                     \n",
+       "1   7.8;0.88;0;2.6;0.098;25;67;0.9968;3.2;0.68;9.8;5                                                                                                                     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "DataFrame shape: (1599, 1) (rows, columns)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Add this code in a new cell after loading the data\n",
+    "\n",
+    "if 'df' in locals(): # Check if df exists\n",
+    "    # Show column names\n",
+    "    print(\"Column names:\")\n",
+    "    for i, col in enumerate(df.columns):\n",
+    "        print(f\"{i+1}. {col}\")\n",
+    "    \n",
+    "    print(\"\\nSample data (first 2 rows):\")\n",
+    "    # Display first 2 rows in table format - Jupyter will render this nicely\n",
+    "    display(df.head(2))\n",
+    "    \n",
+    "    # Print basic info about the dataframe\n",
+    "    print(f\"\\nDataFrame shape: {df.shape} (rows, columns)\")\n",
+    "else:\n",
+    "    print(\"DataFrame 'df' not found. Please load the data first.\")"
    ]
   }
  ],
